[package]
name = "configstore"
version = "0.1.0"
authors = ["Tarik Eshaq <teshaq@mozilla.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.110"
serde_derive = "1.0.110"
serde_json = "1.0.53"
platform-dirs = "0.2.0"