[package]
name = "configstore"
version = "0.1.0"
authors = ["Tarik Eshaq <teshaq@mozilla.com>"]
edition = "2018"
license = "MPL-2.0"
homepage = "https://github.com/tarikeshaq/configstore"
repository = "https://github.com/tarikeshaq/configstore"
readme = "README.md"
exclude = [".gitignore", ".github/**"]
documentation = "https://docs.rs/configstore"
description = "Library to store configurations of applications locally without having to worry about directories or platforms"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.110"
serde_derive = "1.0.110"
serde_json = "1.0.53"
platform-dirs = "0.2.0"